
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct tegra_sor {int dummy; } ;


 int SOR_HDMI2_CTRL ;
 int SOR_HDMI2_CTRL_CLOCK_MODE_DIV_BY_4 ;
 int SOR_HDMI2_CTRL_SCRAMBLE ;
 int tegra_sor_readl (struct tegra_sor*,int ) ;
 int tegra_sor_writel (struct tegra_sor*,int ,int ) ;

__attribute__((used)) static void tegra_sor_hdmi_disable_scrambling(struct tegra_sor *sor)
{
 u32 value;

 value = tegra_sor_readl(sor, SOR_HDMI2_CTRL);
 value &= ~SOR_HDMI2_CTRL_CLOCK_MODE_DIV_BY_4;
 value &= ~SOR_HDMI2_CTRL_SCRAMBLE;
 tegra_sor_writel(sor, value, SOR_HDMI2_CTRL);
}
