; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_sor.c_tegra_sor_hdmi_disable_scrambling.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_sor.c_tegra_sor_hdmi_disable_scrambling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_sor = type { i32 }

@SOR_HDMI2_CTRL = common dso_local global i32 0, align 4
@SOR_HDMI2_CTRL_CLOCK_MODE_DIV_BY_4 = common dso_local global i32 0, align 4
@SOR_HDMI2_CTRL_SCRAMBLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_sor*)* @tegra_sor_hdmi_disable_scrambling to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra_sor_hdmi_disable_scrambling(%struct.tegra_sor* %0) #0 {
  %2 = alloca %struct.tegra_sor*, align 8
  %3 = alloca i32, align 4
  store %struct.tegra_sor* %0, %struct.tegra_sor** %2, align 8
  %4 = load %struct.tegra_sor*, %struct.tegra_sor** %2, align 8
  %5 = load i32, i32* @SOR_HDMI2_CTRL, align 4
  %6 = call i32 @tegra_sor_readl(%struct.tegra_sor* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @SOR_HDMI2_CTRL_CLOCK_MODE_DIV_BY_4, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @SOR_HDMI2_CTRL_SCRAMBLE, align 4
  %12 = xor i32 %11, -1
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, %12
  store i32 %14, i32* %3, align 4
  %15 = load %struct.tegra_sor*, %struct.tegra_sor** %2, align 8
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @SOR_HDMI2_CTRL, align 4
  %18 = call i32 @tegra_sor_writel(%struct.tegra_sor* %15, i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @tegra_sor_readl(%struct.tegra_sor*, i32) #1

declare dso_local i32 @tegra_sor_writel(%struct.tegra_sor*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
